<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/average_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="34dp"
        android:text="@string/average_per_day"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="#000"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_label_archived" />

    <TextView
        android:id="@+id/average_label_created"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="9dp"
        android:text="@string/Create"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/average_label" />

    <TextView
        android:id="@+id/words_label_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="9dp"
        android:text="@string/description"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000"
        app:layout_constraintLeft_toLeftOf="parent"
       tools:layout_editor_absoluteY="472dp" />


    <TextView
        android:id="@+id/average_label_completed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/completed_task"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/average_label_created" />


    <TextView
        android:id="@+id/current_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="80dp"
        android:text="@string/current"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="#000"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/current_label_total"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/total"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_label" />

    <TextView
        android:id="@+id/current_label_active"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/Active_task"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_label_total" />

    <TextView
        android:id="@+id/current_label_completed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="9dp"
        android:text="@string/completed_task"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_label_active" />

    <TextView
        android:id="@+id/current_label_archived"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/archived_task"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_label_completed" />

    <TextView
        android:id="@+id/words_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/wordaverage"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="#000"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteY="407dp"/>

    <TextView
        android:id="@+id/current_total"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="8dp"
        android:text="0"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintLeft_toLeftOf="@+id/current_active"
        app:layout_constraintTop_toBottomOf="@+id/current_label"
        tools:text="25" />

    <TextView
        android:id="@+id/current_active"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="8dp"
        android:text="0"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintLeft_toLeftOf="@+id/current_completed"
        app:layout_constraintTop_toBottomOf="@+id/current_total"
        tools:text="25" />

    <TextView
        android:id="@+id/current_completed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="9dp"
        android:text="0"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintLeft_toLeftOf="@+id/current_deleted"
        app:layout_constraintTop_toBottomOf="@+id/current_active"
        tools:text="2" />

    <TextView
        android:id="@+id/current_deleted"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="8dp"
        android:text="0"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintLeft_toRightOf="@+id/current_label_archived"
        app:layout_constraintTop_toBottomOf="@+id/current_completed"
        tools:text="162" />

    <TextView
        android:id="@+id/average_created"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:text="0"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintTop_toBottomOf="@+id/average_label"
        tools:text="25"
        app:layout_constraintLeft_toRightOf="@+id/average_label_created"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/average_completed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="0"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:text="257"
        tools:layout_editor_absolutX="120dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/average_label"
        app:layout_constraintLeft_toRightOf="@+id/average_label_completed"
        android:layout_marginLeft="8dp" />


    <TextView
        android:id="@+id/words_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:text="0"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintLeft_toRightOf="@+id/words_label_description"
        tools:text="25"
        tools:layout_editor_absoluteY="473dp"
        />



</android.support.constraint.ConstraintLayout>